[gd_scene load_steps=29 format=3 uid="uid://d0rcie7hun16"]

[ext_resource type="Script" path="res://GAME/Scripts/Gameplay/Main/game.gd" id="1_5jc5o"]
[ext_resource type="PackedScene" uid="uid://bcfw5sy5t2e63" path="res://GAME/Scenes/UI/EndScreen.tscn" id="2_fb7e2"]
[ext_resource type="PackedScene" uid="uid://ciag4gvc86bnl" path="res://GAME/Scenes/Player/car.tscn" id="3_qisbg"]
[ext_resource type="Script" path="res://GAME/Scripts/Utility/map_generator.gd" id="4_mkt1p"]
[ext_resource type="Script" path="res://GAME/Scripts/Utility/maptiledata.gd" id="5_2no4k"]
[ext_resource type="Resource" uid="uid://cmju8ysmarlgv" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_LL01.tres" id="6_746ss"]
[ext_resource type="Resource" uid="uid://cpx6qs0xs3igv" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_LC01.tres" id="7_yiru3"]
[ext_resource type="Resource" uid="uid://kxxs6mafqkbu" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_LR01.tres" id="8_3bjsa"]
[ext_resource type="Resource" uid="uid://bi43dnwoulkru" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_CL01.tres" id="9_8ogt4"]
[ext_resource type="Resource" uid="uid://c7vu33f4khgh0" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_CC01.tres" id="10_208ki"]
[ext_resource type="Resource" uid="uid://4nt5wlt0g1ur" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_CR01.tres" id="11_vrhc4"]
[ext_resource type="Resource" uid="uid://cup1gtp3qg561" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_RL01.tres" id="12_j3vcw"]
[ext_resource type="Resource" uid="uid://damxv4pommgsa" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_RC01.tres" id="13_2esgp"]
[ext_resource type="Resource" uid="uid://vtmawvnrmqfn" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_RR01.tres" id="14_05g3b"]
[ext_resource type="Resource" uid="uid://wym5meyekvl4" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_start.tres" id="15_ll8nl"]
[ext_resource type="Resource" uid="uid://kq7yik6d0i5i" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_endL.tres" id="16_q0ubc"]
[ext_resource type="Resource" uid="uid://djtseu28pfgw3" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_endC.tres" id="17_stxdv"]
[ext_resource type="Resource" uid="uid://bm2nys6lxppjt" path="res://GAME/Ressources/Game Data/Map Tile Data/tile_endR.tres" id="18_hrtm4"]
[ext_resource type="PackedScene" uid="uid://2tuxb3m61ix7" path="res://GAME/Scenes/UI/HUD.tscn" id="19_hp342"]
[ext_resource type="PackedScene" uid="uid://vk2y4sbul4g7" path="res://GAME/Scenes/UI/start_menu.tscn" id="20_nonmd"]
[ext_resource type="AudioStream" uid="uid://boehi668eh17h" path="res://GAME/Assets/Audio/Syth-Vibe.wav" id="21_4f350"]
[ext_resource type="AudioStream" uid="uid://cpk5yk8xgrlfl" path="res://GAME/Assets/Audio/GetDrink1.wav" id="22_052li"]
[ext_resource type="AudioStream" uid="uid://cv748wummwat4" path="res://GAME/Assets/Audio/BeerOpening/beer-can-open-sound-230903.mp3" id="23_hsgli"]
[ext_resource type="AudioStream" uid="uid://cnanfkykpxl22" path="res://GAME/Assets/Audio/bumpintowall_X5CNQPB.mp3" id="23_t4fck"]
[ext_resource type="AudioStream" uid="uid://b5dnrlgfbwh8d" path="res://GAME/Assets/Audio/brawl-stars-menu-start-sounds-sound-effect-brawl-stars-hd-sound-effects_01web.mp3" id="24_fal8l"]
[ext_resource type="AudioStream" uid="uid://bl2xmptklnba1" path="res://GAME/Assets/Audio/victory_p1.mp3" id="25_ssfm1"]
[ext_resource type="AudioStream" uid="uid://d3lsapm62ugdl" path="res://GAME/Assets/Audio/victory_p2.mp3" id="26_7phfo"]
[ext_resource type="AudioStream" uid="uid://ij6hc11mrt5" path="res://GAME/Assets/Audio/Level0_1.wav" id="28_np60t"]

[node name="Game" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21.4664, 0)
script = ExtResource("1_5jc5o")
endScreenScene = ExtResource("2_fb7e2")

[node name="car" parent="." instance=ExtResource("3_qisbg")]
transform = Transform3D(1.19249e-08, 0, 1, 0, 1, 0, -1, 0, 1.19249e-08, 0, -20.5567, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.222682, -0.967679, -0.118369, 0.693309, -0.242551, 0.678596, -0.685373, 0.0690451, 0.724912, 0, 251.473, 0)
shadow_enabled = true

[node name="MapGenerator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_mkt1p")
map_tile_datas = Array[ExtResource("5_2no4k")]([ExtResource("6_746ss"), ExtResource("7_yiru3"), ExtResource("8_3bjsa"), ExtResource("9_8ogt4"), ExtResource("10_208ki"), ExtResource("11_vrhc4"), ExtResource("12_j3vcw"), ExtResource("13_2esgp"), ExtResource("14_05g3b")])
tile_start = ExtResource("15_ll8nl")
tile_end_datas = Array[ExtResource("5_2no4k")]([ExtResource("16_q0ubc"), ExtResource("17_stxdv"), ExtResource("18_hrtm4")])

[node name="Hud" parent="." instance=ExtResource("19_hp342")]

[node name="aclool_timer" type="Timer" parent="."]
one_shot = true

[node name="timer_screan" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StartMenu" parent="." instance=ExtResource("20_nonmd")]

[node name="sound" type="Node" parent="."]

[node name="game_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("21_4f350")
bus = &"game_sound"

[node name="drink_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("22_052li")
bus = &"voix_sound"

[node name="drink_sound2" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("23_hsgli")
volume_db = -6.0
bus = &"object_sound"

[node name="bump_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("23_t4fck")
bus = &"object_sound"

[node name="menu_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("24_fal8l")
bus = &"menu_sound"

[node name="end1_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("25_ssfm1")
bus = &"menu_sound"

[node name="end2_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("26_7phfo")
bus = &"menu_sound"

[node name="level_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("28_np60t")
bus = &"voix_sound"

[node name="shoot_sound" type="AudioStreamPlayer" parent="sound"]
max_polyphony = 3
bus = &"voix_sound"

[connection signal="timeout" from="aclool_timer" to="." method="_on_aclool_timer_timeout"]
[connection signal="timeout" from="timer_screan" to="." method="_on_timer_screan_timeout"]
[connection signal="finished" from="sound/drink_sound" to="." method="_on_drink_sound_finished"]
[connection signal="finished" from="sound/level_sound" to="." method="sound_finished"]
